# ai-expense-analyzer

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  clear_db.py  main.py  package-lock.json  pyproject.toml  seed_business_data.py
.github/workflows/: ci.yml  deploy.yml
app/api/: ai.py  analytics.py  anomaly_detection.py  auth.py  csv_import.py  expenses.py  forecasting.py  health.py  nlp.py  vendor_segmentation.py
app/core/: config.py  dependencies.py  security.py
app/db/: database.py  init_db.py
app/models/: expense.py  user.py
app/schemas/: ai.py  analytics.py  expense.py  nlp.py  user.py
app/services/: ai_service.py  analytics_service.py  anomaly_detection_service.py  expense_service.py  forecasting_service.py  vendor_segmentation_service.py
finflow/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js
finflow/src/: App.jsx  index.css
finflow/src/components/: CSVUpload.jsx  ExpenseModal.jsx  ForecastChart.jsx  NLPPanel.jsx  Sidebar.jsx  SpendingBarChart.jsx  SpendingPieChart.jsx  StatCard.jsx
finflow/src/pages/: AIInsights.jsx  BusinessIntelligence.jsx  Dashboard.jsx  Expenses.jsx  Login.jsx  Register.jsx
finflow/src/services/: api.js
frontend/: package-lock.json
frontend/src/: App.jsx
tests/: test_ai.py  test_analyics.py  test_expenses.py  test_health.py  test_nlp.py
